
2020-01-02  Ron Norman <rjn@inglenet.com>

	* parser.y: Reenable READ ADVANCING/RETRY/IGNORE clauses
	* codegen.c: Add code back for READ ADVANCING

2020-01-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_stmt): fixed bad check in file related statements

2020-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.h, parser.y, tree.h, typeck.c: strengthened ASSIGN syntax checks
	  (bug #553).
	* config.def: added new options assign-variable, assign-using-variable,
	  assign-ext-dyn and assign-disk-from.
	* config.def: improved assign-clause help.

2020-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_name_errmsg), tree.h, typeck.c (cb_emit_move): new function
	  for better error messages
	* tree.c (cb_field_size), tree.h, field.c, typeck.c: use new define
	  FIELD_SIZE_UNKNOWN instead of -1
	* typeck.c (validate_move): skip truncation warnings if target and/or
	  source sizes are unknown
	* codegen.c, tree.h: replacing old conflicting constant prefix s_
	  by new CB_PREFIX_SCR_FIELD
	* codegen.c: partially limited variable scope
	* tree.c (cb_tree_category), tree.h: guard cb_category by CB_CATEGORY_ERROR
	* error.c (print_error): used fixed COB_SMALL_BUFF instead of
	  unrelated system-specific BUFSIZ
	* parser.y, reserved.c: PROGRAM-ID/FUNCTION-ID added prototype parsing
	* parser.y, reserved.c, tree.h: added PROGRAM-ID IS RESIDENT
	  (without any codegen yet)
	* parser.y, reserved.c: added parsing for ACUCOBOL transaction management
	* parser.y: fixed parsing for ACUCOBOL's graphical control syntax -
	  screen and control options may be intermixed now
	* parser.y, reserved.c: parsing for screen clauses ENABLED, VISIBLE, HELP-ID
	* tree.h, parser.y, field.c, codegen.c, cobc.c: added CB_USAGE_CONTROL and
	  handling it which fixes several internal compiler errors for sources
	  that contain those

2020-01-02  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Check for SQL reserved words used as column names
